fix(ui->Checkbox, ui->Radio): Improve styles, remove extra spacing.

--- a/packages/docs/client/components/Props/Constructor/index.styl
+++ b/packages/docs/client/components/Props/Constructor/index.styl
@@ -48,3 +48,6 @@ $type = $UI.colors.additional1
 
 .separator
   color $UI.colors.darkLighter
+
+.vCenter
+  justify-content center
