--- a/packages/ui/components/forms/Radio/index.styl
+++ b/packages/ui/components/forms/Radio/index.styl
@@ -17,3 +17,6 @@ _size = 2u
   radius(circle)
   width (_size / 2)
   height @width
+
+.label
+  margin-left 1u
