--- a/packages/ui/components/forms/_helpers/InputWrapper/index.styl
+++ b/packages/ui/components/forms/_helpers/InputWrapper/index.styl
@@ -1,9 +1,9 @@
 .root
   justify-content center
   align-items center
-  width 32px
-  height 32px
-  margin -1u 0
+  width 4u
+  height 4u
+  margin -1u
 
   &.rounded
     radius()
